# FireflyLuaDumper

./: .gitignore  Cargo.toml  README.md  build.bat  mhypbase.def
.github/workflows/: rust.yml
Scripts/: CSharp.lua  ExcelOutput.lua  FloorConfig.lua  GroupConfig.lua  LocalPlayerConfig.lua  MissionConfig.lua  Proto.lua  SummonUnitConfig.lua
common/: Cargo.toml
common/src/: config.rs
src/: config.json  config.rs  dll_sideload.rs  interceptor.rs  lib.rs  manager.rs  marshal.rs  util.rs  xluau.rs
src/data/: config.json  key.pem
src/func/: disable_censorship.rs  dll_sideload.rs  http.rs  il2cpp_api_bridge.rs  mod.rs
src/func/luau/: compile.rs  luau.rs  mod.rs
src/func/unity/: api.rs  mod.rs
src/luau/: luau.rs  mod.rs
src/modules/: disable_censorship.rs  dll_sideload.rs  http.rs  il2cpp_api_bridge.rs  luau_compile.rs  mod.rs  xlua.rs
src/unity/: api.rs  functions.rs  il2cpp_api_bridge.rs  mod.rs  module.rs  rva_dumper.rs
