[workspace.package]
version = "1.0.0"

[workspace]
members = ["external", "common"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
ilhook = "2.1.1"
lazy_static = "1.5.0"
libloading = "0.8.5"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
] }
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "ntdef", "minwindef", "minwinbase", "winnt", "libloaderapi"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
patternscan = "1.2.0"

cc = "1.1.10"
embed-resource = "2.4"

common = { path = "common/" }

[profile.dev]
opt-level = 2     # Optimization level 2.

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
